--- a/WinAPI/WinAPI/Resource.rc
+++ b/WinAPI/WinAPI/Resource.rc
@@ -50,13 +50,17 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 300, 200, 209, 80
+IDD_DIALOG1 DIALOGEX 300, 200, 235, 95
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "My first window"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,91,52,50,14
-    PUSHBUTTON      "E&xit",IDCANCEL,145,52,50,14
+    DEFPUSHBUTTON   "OK",IDOK,125,74,50,14
+    PUSHBUTTON      "E&xit",IDCANCEL,178,74,50,14
+    EDITTEXT        IDC_EDIT1,7,20,221,14,ES_AUTOHSCROLL
+    LTEXT           "Строка источник:",IDC_STATIC,7,7,62,8
+    LTEXT           "Строка получатель:",IDC_STATIC,7,39,70,8
+    EDITTEXT        IDC_EDIT2,7,52,221,14,ES_AUTOHSCROLL
 END
 
 
@@ -71,9 +75,9 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 202
+        RIGHTMARGIN, 228
         TOPMARGIN, 7
-        BOTTOMMARGIN, 73
+        BOTTOMMARGIN, 88
     END
 END
 #endif    // APSTUDIO_INVOKED
