--- a/WinAPI/WinAPI/Resource.rc
+++ b/WinAPI/WinAPI/Resource.rc
@@ -50,13 +50,14 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 300, 200, 209, 80
+IDD_DIALOG1 DIALOGEX 300, 200, 203, 80
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "My first window"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,91,52,50,14
-    PUSHBUTTON      "E&xit",IDCANCEL,145,52,50,14
+    DEFPUSHBUTTON   "OK",IDOK,81,59,50,14
+    PUSHBUTTON      "E&xit",IDCANCEL,135,59,50,14
+    LISTBOX         IDC_LIST1,7,7,189,45,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -71,7 +72,7 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 202
+        RIGHTMARGIN, 196
         TOPMARGIN, 7
         BOTTOMMARGIN, 73
     END
