--- a/WinAPI/WinAPI/Resource.rc
+++ b/WinAPI/WinAPI/Resource.rc
@@ -50,13 +50,14 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 300, 200, 209, 80
+IDD_DIALOG1 DIALOGEX 300, 200, 221, 110
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "My first window"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,91,52,50,14
-    PUSHBUTTON      "E&xit",IDCANCEL,145,52,50,14
+    DEFPUSHBUTTON   "OK",IDOK,110,89,50,14
+    PUSHBUTTON      "E&xit",IDCANCEL,163,89,50,14
+    COMBOBOX        IDC_COMBO1,6,7,207,74,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -70,10 +71,10 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 202
+        LEFTMARGIN, 6
+        RIGHTMARGIN, 213
         TOPMARGIN, 7
-        BOTTOMMARGIN, 73
+        BOTTOMMARGIN, 103
     END
 END
 #endif    // APSTUDIO_INVOKED
